# longq

./: .env.example  .gitattributes  .gitignore  LICENSE  Quantum Qi - Guest Portal.html  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  test.txt  tox.ini
.chrome-app-operator/: Local State
.github/workflows/: ci.yml  (+1 more)
.license-dev/: client.lic
backend/: .env  app.py  app.py.bak.1761469481  app.py.bak.1761469680  app.py.bak.1761469713  db.py  license_manager.py  maintenance.py  models.py  models.py.bak.1761469481  parse_food_pdf.py  parse_food_pdf_new.py  parse_heavy_metals_pdf.py  parse_hormones_pdf.py  parse_nutrition_pdf.py  parse_peek_report.py  parse_toxins_pdf.py  parser_adapter.py  paths.py  requirements.in  requirements.txt  runner.py  schemas.py  schemas.py.bak.1761469481  security.py  session_fs.py  storage.py  token_manager.py
electron/: main.js  package-lock.json  package.json  preload.js  serve.js
frontend/: .eslintignore  .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
license-api/: README.md  package-lock.json  package.json  wrangler.toml
licenses/: README.md  THIRD_PARTY_NOTICES.md  backend_licenses.json  electron_licenses.json  frontend_licenses.json
scripts/: build_third_party_notice.py  cleanrepo.sh  dev.sh  devlaunch.sh  electron-package.mjs  fix_windows_stdlib.py  generate_all_licenses.sh  generate_backend_licenses.py  generate_js_licenses.mjs  generate_third_party_notice.py  list_backend_packages.py  png_to_ico.cjs  run_generate_all_licenses.cjs
(+224 files in other folders)
