[tool.black]
line-length = 100
target-version = ["py311"]
include = "backend/.*\\.py"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
extend-exclude = ["backend/__pycache__", "backend/.venv"]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "ASYNC", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
files = ["backend"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["backend/tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
